code/dotnet/FactSetFunds/v1/docs/DistCurrent.md
# FactSet.SDK.FactSetFunds.Model.DistCurrent

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**FsymId** | **string** | FactSet Security Identifier. Six alpha-numeric characters, excluding vowels, with a -S suffix (XXXXXX-S), resolved from the requestId of the Fund requested. | [optional] 
**Date** | **DateTime?** | The date of the distribution in YYYY-MM-DD format. | [optional] 
**Currency** | **string** | ISO Currency | [optional] 
**TotalDistributions** | **double?** | Total Distributions. | [optional] 
**ReturnOfCapital** | **double?** | Return on Capital. | [optional] 
**QualifiedDividends** | **double?** | Qualified Dividends. | [optional] 
**NonQualifiedDividends** | **double?** | Non-Qualified Dividends. | [optional] 
**DailyAccruedDividends** | **double?** | Daily Accrued Dividends. | [optional] 
**StCapitalGains** | **double?** | Short-Term Capital Gains. | [optional] 
**LtCapitalGains** | **double?** | Long-Term Capital Gains. | [optional] 
**IndicatedAnnualDividend** | **double?** | Indicated annual dividend. | [optional] 
**DistFrequency** | **string** | Distribution frequency. | [optional] 
**LtmDistYield** | **double?** | Distribution yield for the last twelve months. | [optional] 
**FirstDistDate** | **DateTime?** | The date of the funds first distribution in YYYY-MM-DD format. | [optional] 
**SevenDayNetSecYield** | **double?** | Net SEC yield for the last seven days. | [optional] 
**SevenDayGrossSecYield** | **double?** | Gross SEC yield for the last seven days. | [optional] 
**ThirtyDayNetSecYield** | **double?** | Net SEC yield for the thirty thirty days. | [optional] 
**ThirtyDayGrossSecYield** | **double?** | Gross SEC yield for the last thirty days. | [optional] 
**RequestId** | **string** | The requested Id sent as input. | [optional] 

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)

